# Copyright (c) 2014-2019, The Monero Project
#
# All rights reserved.
#
# Redistribution and use in source and binary forms, with or without modification, are
# permitted provided that the following conditions are met:
#
# 1. Redistributions of source code must retain the above copyright notice, this list of
#    conditions and the following disclaimer.
#
# 2. Redistributions in binary form must reproduce the above copyright notice, this list
#    of conditions and the following disclaimer in the documentation and/or other
#    materials provided with the distribution.
#
# 3. Neither the name of the copyright holder nor the names of its contributors may be
#    used to endorse or promote products derived from this software without specific
#    prior written permission.
#
# THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY
# EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF
# MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL
# THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
# SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO,
# PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS
# INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT,
# STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF
# THE USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

cmake_minimum_required (VERSION 2.6)
project (loki CXX)

set(cryptonote_protocol_sources
  block_queue.cpp
  cryptonote_protocol_handler.inl
  quorumnet.cpp
  core_protocol_instantiation.cpp
  p2p_net_node_instantiation.cpp
)

set(cryptonote_protocol_headers)
set(cryptonote_protocol_private_headers
  block_queue.h
  cryptonote_protocol_defs.h
  cryptonote_protocol_handler_common.h
  cryptonote_protocol_handler.h
  quorumnet.h
)

loki_private_headers(cryptonote_protocol
  ${cryptonote_protocol_private_headers})
loki_add_library(cryptonote_protocol
  ${cryptonote_protocol_sources}
  ${cryptonote_protocol_headers}
  ${cryptonote_protocol_private_headers})

target_link_libraries(cryptonote_protocol
  PUBLIC
    p2p
    quorumnet
  PRIVATE
    ${EXTRA_LIBRARIES})
